﻿###1.5.5#!#20210623#!#
- This Update is brought you by Henpemaz
- Config Machine now initializes with ProcessManager
 + Fixes CM not loading with EDT's skip_title feature
- 
###1.5.4#!#20210525#!#
1.5.4.2
- Reverted some of LabelTest changes to restore compatibility with CRS
- Config Machine will now use AssemblyDescription to describe mods that doesn't support CM
1.5.4.1
- Rearranged LabelTest to accomodate ComunicationModule 2.5.0 Patch
- Also rearranged internal Changelog so the latest version always comes first
1.5.4.0
- Changed the message for mods that doesn't support CM to something less look like an error message but more neutral
- Added and modified several functions to make managing UIelements easier
 + Added several bulk managing static methods for OpTab: RemoveItemsFromTab, ShowItems, HideItems, DestroyItems, SetGreyedOutItems
 + Added OpScrollBox.RemoveItemsFromScrollBox
 + OpTab.RemoveItems (and RemoveItemsFromTab) now removes the item from its scrollBox
 + OpTab.AddItems now automatically calls RemoveItemsFromTab if the item is already in other OpTab
- OpScrollBox.SetContentSize is added
 + OpScrollBox.contentSize is now Obsolete; use GetContentSize instead
###1.5.3#!#20210405#!#
1.5.3.2
- Fixed OpLabelLong breaking with multiple linebreaks at once
- Mods can manually call ConfigMenu.RefreshCurrentConfig() to refresh own OI
 + ResetCurrentConfig() refreshes AND resets configurations
 + RefreshCurrentConfig() only unloads and reload OI but won't reset configurations
 + Of course, call ConfigMenu.SaveCurrentConfig(bool) manually before calling RefreshCurrentConfig() to preserve configurations
1.5.3.0
- Added new provided UIconfigs
 + OpUpdown: Textbox with arrows, specialized for accepting a large range of number
  x Along with typing, you can use the arrows button or scroll wheel to adjust the number
  x GeneratedOI for BepInEx.Configuration now uses this for int and float
 + OpListBox: Listbox that stays open and you can also search