@@ -14,15 +14,21 @@ namespace CompletelyOptional
             //On.PlayerProgression.WipeAll hmmmmm
         }
 
-        private static void LoadAndSaveOI(int saveOrLoad, bool force, bool saveAsDeath = false, bool saveAsQuit = false)
+        internal enum SaveAndLoad
+        {
+            Update = 0, // Call Slot Update
+            Save = 1,
+            Load = 2
+        }
+
+        private static void SaveAndLoadOIs(SaveAndLoad saveOrLoad, bool force, bool saveAsDeath = false, bool saveAsQuit = false)
         {
             foreach (OptionInterface oi in OptionScript.loadedInterfaces)
             {
-                if (force) { oi.BackgroundUpdate(saveOrLoad); }
-                else if (oi.progressData)
+                if (oi.hasProgData)
                 {
-                    oi.BackgroundUpdate(saveOrLoad);
-                    if (saveOrLoad == 1)
+                    oi.ProgSaveOrLoad(saveOrLoad);
+                    if (!force && saveOrLoad == SaveAndLoad.Save)
                     {
                         oi.saveAsDeath = saveAsDeath;
                         oi.saveAsQuit = saveAsQuit;
@@ -36,15 +42,15 @@ namespace CompletelyOptional
             orig.Invoke(self, manager);
             foreach (OptionInterface oi in OptionScript.loadedInterfaces)
             {
-                oi.GenerateDataArray(self.slugcatColorOrder.Length);
+                if (oi.hasProgData) { oi.GenerateDataArray(self.slugcatColorOrder.Length); }
             }
-            LoadAndSaveOI(0, true);
+            SaveAndLoadOIs(SaveAndLoad.Update, true);
         }
 
         private static void SessionEndPatch(On.SaveState.orig_SessionEnded orig, SaveState self, RainWorldGame game, bool survived, bool newMalnourished)
         {
             orig.Invoke(self, game, survived, newMalnourished);
-            LoadAndSaveOI(2, false);
+            SaveAndLoadOIs(SaveAndLoad.Load, false);
         }
 
         private static void LoadGamePatch(On.SaveState.orig_LoadGame orig, SaveState self, string str, RainWorldGame game)
@@ -55,22 +61,19 @@ namespace CompletelyOptional
                 // Fresh start/restart
                 foreach (OptionInterface oi in OptionScript.loadedInterfaces)
                 {
-                    if (oi.progressData)
-                    {
-                        oi.OnNewSave();
-                    }
+                    if (oi.hasProgData) { oi.OnNewSave(false); }
                 }
             }
             else
             {
-                LoadAndSaveOI(2, false);
+                SaveAndLoadOIs(SaveAndLoad.Load, false);
             }
         }
 
         private static string SaveToStringPatch(On.DeathPersistentSaveData.orig_SaveToString orig, DeathPersistentSaveData self, bool saveAsIfPlayerDied, bool saveAsIfPlayerQuit)
         {
             string result = orig.Invoke(self, saveAsIfPlayerDied, saveAsIfPlayerQuit);
-            LoadAndSaveOI(1, false, saveAsIfPlayerDied, saveAsIfPlayerQuit);
+            SaveAndLoadOIs(SaveAndLoad.Save, false, saveAsIfPlayerDied, saveAsIfPlayerQuit);
             return result;
         }
     }
